[gd_scene load_steps=7 format=3 uid="uid://cdkicasp65o4b"]

[ext_resource type="Script" path="res://menus/option_menu/option_menu.gd" id="1_o5c20"]
[ext_resource type="PackedScene" uid="uid://bnl4aymwagsqa" path="res://menus/menu_template.tscn" id="2_5rd8f"]
[ext_resource type="PackedScene" uid="uid://ga63x4i2ugw4" path="res://menus/button.tscn" id="2_fyjd1"]
[ext_resource type="Theme" uid="uid://bniwcx6k6wrx7" path="res://menus/menu.tres" id="3_0wlvc"]
[ext_resource type="PackedScene" uid="uid://d0dr7finpfu4d" path="res://menus/slider.tscn" id="3_l5udh"]
[ext_resource type="PackedScene" uid="uid://dpx1mkfrxogqu" path="res://menus/menu_label.tscn" id="3_yts85"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5c20")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(350, 550)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -250.0
offset_right = 175.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.211765, 0.211765, 0.211765, 0.67451)

[node name="MenuTemplate" parent="." instance=ExtResource("2_5rd8f")]
layout_mode = 1

[node name="Label" parent="MenuTemplate/VBoxContainer" index="0"]
theme = ExtResource("3_0wlvc")
text = "Options"

[node name="GridContainer" type="GridContainer" parent="MenuTemplate/VBoxContainer/VBoxContainer" index="0"]
custom_minimum_size = Vector2(267.92, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 16
columns = 2

[node name="MasterLabel" parent="MenuTemplate/VBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("3_yts85")]
layout_mode = 2
text = "Sound"

[node name="MasterSlider" parent="MenuTemplate/VBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("3_l5udh")]
unique_name_in_owner = true
layout_mode = 2

[node name="MusicLabel" parent="MenuTemplate/VBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("3_yts85")]
layout_mode = 2

[node name="MusicSlider" parent="MenuTemplate/VBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("3_l5udh")]
unique_name_in_owner = true
layout_mode = 2

[node name="SFX" parent="MenuTemplate/VBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("3_yts85")]
layout_mode = 2
text = "SFX"

[node name="SFXSlider" parent="MenuTemplate/VBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("3_l5udh")]
unique_name_in_owner = true
layout_mode = 2

[node name="Fullscreen" parent="MenuTemplate/VBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("3_yts85")]
layout_mode = 2
text = "Fullscreen"

[node name="FullscreenCheckButton" type="CheckButton" parent="MenuTemplate/VBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="Reset_Settings_Button" parent="MenuTemplate/VBoxContainer/VBoxContainer" index="1" instance=ExtResource("2_fyjd1")]
layout_mode = 2
text = "Reset Settings"
script = null

[node name="Back_Button" parent="MenuTemplate/VBoxContainer/VBoxContainer" index="2" instance=ExtResource("2_fyjd1")]
layout_mode = 2
text = "Return"
script = null

[connection signal="value_changed" from="MenuTemplate/VBoxContainer/VBoxContainer/GridContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="MenuTemplate/VBoxContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MenuTemplate/VBoxContainer/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="toggled" from="MenuTemplate/VBoxContainer/VBoxContainer/GridContainer/FullscreenCheckButton" to="." method="_on_fullscreen_check_button_toggled"]
[connection signal="pressed" from="MenuTemplate/VBoxContainer/VBoxContainer/Reset_Settings_Button" to="." method="_on_reset_settings_button_pressed"]
[connection signal="pressed" from="MenuTemplate/VBoxContainer/VBoxContainer/Back_Button" to="." method="_on_back_button_pressed"]

[editable path="MenuTemplate"]
